--- a/values.yaml
+++ b/values.yaml
@@ -272,7 +272,7 @@ executor: "KubernetesExecutor"
 # will be able to launch pods.
 allowPodLaunching: true
 
-# Environment variables for all airflow containers
+# Environment variables for all airflow containers 
 env: []
 # - name: ""
 #   value: ""
@@ -2592,22 +2592,22 @@ dags:
     ## optional subpath for dag volume mount
     subPath: ~
   gitSync:
-    enabled: false
+    enabled: true
 
     # git repo clone url
     # ssh example: git@github.com:apache/airflow.git
     # https example: https://github.com/apache/airflow.git
-    repo: https://github.com/apache/airflow.git
-    branch: v2-2-stable
-    rev: HEAD
+    repo: https://github.com/rasand18/Airflow.git
+    branch: main
+    rev: HEAD 
     # The git revision (branch, tag, or hash) to check out, v4 only
-    ref: v2-2-stable
-    depth: 1
+    ref: main
+    depth: 0
     # the number of consecutive failures allowed before aborting
     maxFailures: 0
     # subpath within the repo where dags are located
     # should be "" if dags are at repo root
-    subPath: "tests/dags"
+    subPath: "dags"
     # if your repo needs a user name password
     # you can load them to a k8s secret like the one below
     #   ---
