--- a/dags/spark-pi.yaml
+++ b/dags/spark-pi.yaml
@@ -26,3 +26,6 @@ spec:
     instances: 1
     cores: 1
     memory: 512m
+  batchScheduler: yunikorn
+  batchSchedulerOptions:
+    queue: root.default
