--- a/dags/spark-pi.yaml
+++ b/dags/spark-pi.yaml
@@ -1,7 +1,7 @@
 apiVersion: sparkoperator.k8s.io/v1beta2
 kind: SparkApplication
 metadata:
-  name: spark-pi
+  name: spark-pi-{{ task_instance.task_id }}
   namespace: spark-operator
 spec:
   type: Scala
