--- a/dags/spark-pi.yaml
+++ b/dags/spark-pi.yaml
@@ -14,15 +14,20 @@ spec:
     - "1000"
   sparkVersion: 3.5.3
   timeToLiveSeconds: 3600  # Podden lever i 1 timme efter avslutning
+  sparkConf:
+    "spark.kubernetes.driver.label.queue": "root.low"
+    "spark.kubernetes.executor.label.queue": "root.low"
   driver:
     labels:
       version: 3.5.3
+      queue: root.low
     cores: 1
     memory: 512m
     serviceAccount: spark-operator-spark
   executor:
     labels:
       version: 3.5.3
+      queue: root.low
     instances: 1
     cores: 1
     memory: 512m
