--- a/dags/spark-pi.yaml
+++ b/dags/spark-pi.yaml
@@ -28,4 +28,4 @@ spec:
     memory: 512m
   batchScheduler: yunikorn
   batchSchedulerOptions:
-    queue: root.test
+    queue: root.yunikorn-test-1
