--- a/dags/spark-pi.yaml
+++ b/dags/spark-pi.yaml
@@ -14,6 +14,8 @@ spec:
     - "1000"
   sparkVersion: 3.5.3
   timeToLiveSeconds: 3600  # Podden lever i 1 timme efter avslutning
+  sparkConf:
+    "spark.yunikorn.queue": "root.low"
   driver:
     labels:
       version: 3.5.3
