--- a/dags/spark-pi.yaml
+++ b/dags/spark-pi.yaml
@@ -22,12 +22,18 @@ spec:
     cores: 1
     memory: 512m
     serviceAccount: spark-operator-spark
+    env:
+      - name: SPARK_YUNIKORN_QUEUE
+        value: "root.low"
   executor:
     labels:
       version: 3.5.3
     instances: 1
     cores: 1
     memory: 512m
+    env:
+      - name: SPARK_YUNIKORN_QUEUE
+        value: "root.low"
   batchScheduler: yunikorn
   batchSchedulerOptions:
     queue: root.low
