--- a/dags/spark.yaml
+++ b/dags/spark.yaml
@@ -1,7 +1,7 @@
 apiVersion: sparkoperator.k8s.io/v1beta2
 kind: SparkApplication
 metadata:
-  name: spark-python-app-{{ task_instance.task_id }}
+  name: spark-python-app-k8s
   namespace: spark-operator
 spec:
   type: Python
