--- a/dags/spark.yaml
+++ b/dags/spark.yaml
@@ -31,6 +31,11 @@ spec:
       version: 3.5.3
     cores: 1
     memory: 2G
+    resources:
+    requests:
+      ephemeral-storage: "1Gi"  # Minimum utrymme som krävs
+    limits:
+      ephemeral-storage: "2Gi"  # Maximal tillåten användning
     serviceAccount: spark-operator-spark
     env:
       - name: SPARK_YUNIKORN_QUEUE
@@ -41,6 +46,11 @@ spec:
     instances: 1
     cores: 1
     memory: 2G
+    resources:
+    requests:
+      ephemeral-storage: "1Gi"  # Minimum utrymme som krävs
+    limits:
+      ephemeral-storage: "2Gi"  # Maximal tillåten användning
     env:
       - name: SPARK_YUNIKORN_QUEUE
         value: "root.high"
