--- a/dags/spark.yaml
+++ b/dags/spark.yaml
@@ -27,34 +27,34 @@ spec:
     "spark.executor.extraJavaOptions": "-Dcom.amazonaws.sdk.disableCertChecking"
     "spark.driver.extraJavaOptions": "-Dcom.amazonaws.sdk.disableCertChecking"
   driver:
-    labels:
-      version: 3.5.3
-    cores: 1
-    memory: 2G
-    resources:
-    requests:
-      ephemeral-storage: "1Gi"  # Minimum utrymme som krävs
-    limits:
-      ephemeral-storage: "2Gi"  # Maximal tillåten användning
-    serviceAccount: spark-operator-spark
-    env:
-      - name: SPARK_YUNIKORN_QUEUE
-        value: "root.high"
-  executor:
-    labels:
-      version: 3.5.3
-    instances: 1
-    cores: 1
-    memory: 2G
-    resources:
-    requests:
-      ephemeral-storage: "1Gi"  # Minimum utrymme som krävs
-    limits:
-      ephemeral-storage: "2Gi"  # Maximal tillåten användning
-    env:
-      - name: SPARK_YUNIKORN_QUEUE
-        value: "root.high"
-  batchScheduler: yunikorn
-  batchSchedulerOptions:
-    queue: root.high
+      labels:
+        version: 3.5.3
+      cores: 1
+      memory: 2G
+      resources:
+        requests:
+          ephemeral-storage: "1Gi"  # Minimum utrymme som krävs
+        limits:
+          ephemeral-storage: "2Gi"  # Maximal tillåten användning
+      serviceAccount: spark-operator-spark
+      env:
+        - name: SPARK_YUNIKORN_QUEUE
+          value: "root.high"
+    executor:
+      labels:
+        version: 3.5.3
+      instances: 1
+      cores: 1
+      memory: 2G
+      resources:
+        requests:
+          ephemeral-storage: "1Gi"
+        limits:
+          ephemeral-storage: "2Gi"
+      env:
+        - name: SPARK_YUNIKORN_QUEUE
+          value: "root.high"
+    batchScheduler: yunikorn
+    batchSchedulerOptions:
+      queue: root.high
 
