--- a/dags/spark.yaml
+++ b/dags/spark.yaml
@@ -13,6 +13,7 @@ spec:
   timeToLiveSeconds: 3600  # Podden lever i 1 timme efter avslutning
   sparkConf:
     "spark.yunikorn.queue": "root.high"
+    "spark.local.dir": "/tmp"
     "spark.jars.packages": "org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.1,io.delta:delta-spark_2.12:3.1.0,org.apache.spark:spark-avro_2.12:3.5.1,org.apache.hadoop:hadoop-aws:3.3.1,com.amazonaws:aws-java-sdk-bundle:1.12.375"
     "spark.sql.extensions": "io.delta.sql.DeltaSparkSessionExtension"
     "spark.sql.catalog.spark_catalog": "org.apache.spark.sql.delta.catalog.DeltaCatalog"
