--- a/dags/spark.yaml
+++ b/dags/spark.yaml
@@ -37,6 +37,13 @@ spec:
         ephemeral-storage: "1Gi"  # Minimum utrymme som krävs
       limits:
         ephemeral-storage: "2Gi"  # Maximal tillåten användning
+    volumeMounts:
+      - name: spark-tmp
+        mountPath: /tmp
+    volumes:
+      - name: spark-tmp
+        persistentVolumeClaim:
+          claimName: spark-pvc
     serviceAccount: spark-operator-spark
     env:
       - name: SPARK_YUNIKORN_QUEUE
@@ -52,6 +59,13 @@ spec:
         ephemeral-storage: "1Gi"
       limits:
         ephemeral-storage: "2Gi"
+    volumeMounts:
+      - name: spark-tmp
+        mountPath: /tmp
+    volumes:
+      - name: spark-tmp
+        persistentVolumeClaim:
+          claimName: spark-pvc
     env:
       - name: SPARK_YUNIKORN_QUEUE
         value: "root.high"
