--- a/dags/spark.yaml
+++ b/dags/spark.yaml
@@ -27,16 +27,14 @@ spec:
     "spark.hadoop.fs.s3a.connection.ssl.verify": "false"
     "spark.executor.extraJavaOptions": "-Dcom.amazonaws.sdk.disableCertChecking"
     "spark.driver.extraJavaOptions": "-Dcom.amazonaws.sdk.disableCertChecking"
+    "spark.ui.showConsoleProgress": "true"
+    "spark.executor.extraJavaOptions": "-Dlog4j.rootCategory=DEBUG,console"
+    "spark.driver.extraJavaOptions": "-Dlog4j.rootCategory=DEBUG,console"
   driver:
     labels:
       version: 3.5.3
     cores: 1
     memory: 2G
-    resources:
-      requests:
-        ephemeral-storage: "1Gi"  # Minimum utrymme som krävs
-      limits:
-        ephemeral-storage: "2Gi"  # Maximal tillåten användning
     serviceAccount: spark-operator-spark
     env:
       - name: SPARK_YUNIKORN_QUEUE
@@ -47,11 +45,6 @@ spec:
     instances: 1
     cores: 1
     memory: 2G
-    resources:
-      requests:
-        ephemeral-storage: "1Gi"
-      limits:
-        ephemeral-storage: "2Gi"
     env:
       - name: SPARK_YUNIKORN_QUEUE
         value: "root.high"
