--- a/dags/sparkElias.yaml
+++ b/dags/sparkElias.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   type: Python
   mode: cluster
-  image: harbor.ad.spendrups.se/dataplatform-test/spark-kafka-to-base:1.0
+  image: harbor.ad.spendrups.se/dataplatform-test/spark-kafka-to-base:1.1
   imagePullPolicy: Always
   mainApplicationFile: local:///app/sparkKafkaToBase.py  # Placera din Python-fil i /app
   sparkVersion: 3.5.3
@@ -20,6 +20,17 @@ spec:
     "spark.sql.catalog.spark_catalog": "org.apache.spark.sql.delta.catalog.DeltaCatalog"
     "spark.hadoop.fs.s3a.impl": "org.apache.hadoop.fs.s3a.S3AFileSystem"
     "spark.hadoop.fs.s3a.aws.credentials.provider": "org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider"
+    "spark.hadoop.fs.s3a.access.key": "xIgeFyKHqCzuC79ITuSW"
+    "spark.hadoop.fs.s3a.secret.key": "vBaNq4k9ioYxdWKpiqzimm9qeN5sceSOu5IZjOeX"
+    "spark.hadoop.fs.s3a.endpoint": "https://dataplatform-minio-test.ad.spendrups.se"
+    "spark.hadoop.fs.s3a.path.style.access": "true"
+    "spark.hadoop.fs.s3a.connection.ssl.enabled": "true"
+    "spark.hadoop.fs.s3a.connection.ssl.verify": "false"
+    "spark.executor.extraJavaOptions": "-Dcom.amazonaws.sdk.disableCertChecking"
+    "spark.driver.extraJavaOptions": "-Dcom.amazonaws.sdk.disableCertChecking"
+    "spark.ui.showConsoleProgress": "true"
+    "spark.executor.extraJavaOptions": "-Dlog4j.rootCategory=DEBUG,console"
+    "spark.driver.extraJavaOptions": "-Dlog4j.rootCategory=DEBUG,console"
   driver:
     labels:
       version: 3.5.3
