--- a/dags/sparkElias.yaml
+++ b/dags/sparkElias.yaml
@@ -32,7 +32,7 @@ spec:
     volumeMounts:
       - name: hive-config
         mountPath: /opt/bitnami/spark/conf
-        readOnly: true
+        readOnly: false
   executor:
     labels:
       version: 3.5.3
@@ -45,7 +45,7 @@ spec:
     volumeMounts:
       - name: hive-config
         mountPath: /opt/bitnami/spark/conf
-        readOnly: true
+        readOnly: false
   batchScheduler: yunikorn
   batchSchedulerOptions:
     queue: root.high
