--- a/dags/sparkElias.yaml
+++ b/dags/sparkElias.yaml
@@ -29,6 +29,10 @@ spec:
     env:
       - name: SPARK_YUNIKORN_QUEUE
         value: "root.high"
+    securityContext:
+      runAsUser: 0        # Kör som root (UID 0)
+      runAsGroup: 0       # Använd root-gruppen (GID 0)
+      fsGroup: 0          # Grupp för filsystemtillgång
     volumeMounts:
       - name: hive-config
         mountPath: /opt/bitnami/spark/conf
@@ -42,6 +46,10 @@ spec:
     env:
       - name: SPARK_YUNIKORN_QUEUE
         value: "root.high"
+    securityContext:
+      runAsUser: 0        # Kör som root (UID 0)
+      runAsGroup: 0       # Använd root-gruppen (GID 0)
+      fsGroup: 0          # Grupp för filsystemtillgång
     volumeMounts:
       - name: hive-config
         mountPath: /opt/bitnami/spark/conf
