--- a/dags/sparkTransformToAzure.yaml
+++ b/dags/sparkTransformToAzure.yaml
@@ -6,16 +6,19 @@ metadata:
 spec:
   type: Python
   mode: cluster
-  image: harbor.ad.spendrups.se/dataplatform-test/spark-kafka-to-base:1.1
+  image: harbor.ad.spendrups.se/dataplatform-test/spark-transform-to-azure:1.0
   imagePullPolicy: Always
-  mainApplicationFile: local:///app/sparkKafkaToBase.py  # Placera din Python-fil i /app
+  mainApplicationFile: local:///app/sparkTransformToAzure.py  # Placera din Python-fil i /app
+  arguments: [
+                --input_tables,
+                CSYTAB_clean_system_settings
+            ],
   sparkVersion: 3.5.3
   timeToLiveSeconds: 3600  # Podden lever i 1 timme efter avslutning
   sparkConf:
     "spark.yunikorn.queue": "root.high"
-    "spark.local.dir": "s3a://base-checkpoint/"
     "spark.logLevel": "DEBUG"
-    "spark.jars.packages": "org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.1,io.delta:delta-spark_2.12:3.1.0,org.apache.spark:spark-avro_2.12:3.5.1,org.apache.hadoop:hadoop-aws:3.3.1,com.amazonaws:aws-java-sdk-bundle:1.12.375"
+    "spark.jars.packages": "org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.1,io.delta:delta-spark_2.12:3.1.0,org.apache.spark:spark-avro_2.12:3.5.1,org.apache.hadoop:hadoop-aws:3.3.1,com.amazonaws:aws-java-sdk-bundle:1.12.375,org.apache.hadoop:hadoop-azure:3.2.0"
     "spark.sql.extensions": "io.delta.sql.DeltaSparkSessionExtension"
     "spark.sql.catalog.spark_catalog": "org.apache.spark.sql.delta.catalog.DeltaCatalog"
     "spark.hadoop.fs.s3a.impl": "org.apache.hadoop.fs.s3a.S3AFileSystem"
@@ -41,5 +44,4 @@ spec:
   batchScheduler: yunikorn
   batchSchedulerOptions:
     queue: root.high
-
 
