--- a/dags/sparkTransformToAzure.yaml
+++ b/dags/sparkTransformToAzure.yaml
@@ -9,10 +9,9 @@ spec:
   image: harbor.ad.spendrups.se/dataplatform-test/spark-transform-to-azure:1.0
   imagePullPolicy: Always
   mainApplicationFile: local:///app/sparkTransformToAzure.py  # Placera din Python-fil i /app
-  arguments: [
-                --input_tables,
-                CSYTAB_clean_system_settings
-            ],
+  arguments:
+      - "--input_tables"
+      - "CSYTAB_clean_system_settings"
   sparkVersion: 3.5.3
   timeToLiveSeconds: 3600  # Podden lever i 1 timme efter avslutning
   sparkConf:
