--- a/dags/sparkTransformToAzure.yaml
+++ b/dags/sparkTransformToAzure.yaml
@@ -1,21 +1,21 @@
 apiVersion: sparkoperator.k8s.io/v1beta2
 kind: SparkApplication
 metadata:
-  name: spark-python-app-k8s
+  name: spark-python-app-{{ table_name }}
   namespace: spark-operator
 spec:
   type: Python
   mode: cluster
   image: harbor.ad.spendrups.se/dataplatform-test/spark-transform-to-azure:1.0
   imagePullPolicy: Always
-  mainApplicationFile: local:///app/sparkTransformToAzure.py  # Placera din Python-fil i /app
+  mainApplicationFile: local:///app/sparkTransformToAzure.py
   arguments:
     - "--input_tables"
-    - "CSYTAB_clean_system_settings"
+    - "{{ table_name }}"
   sparkVersion: 3.5.3
-  timeToLiveSeconds: 3600  # Podden lever i 1 timme efter avslutning
+  timeToLiveSeconds: 3600
   sparkConf:
-    "spark.yunikorn.queue": "root.high"
+    "spark.yunikorn.queue": "root.high"  # Statisk för nu, men kan göras dynamisk senare
     "spark.logLevel": "DEBUG"
     "spark.jars.packages": "org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.1,io.delta:delta-spark_2.12:3.1.0,org.apache.spark:spark-avro_2.12:3.5.1,org.apache.hadoop:hadoop-aws:3.3.1,com.amazonaws:aws-java-sdk-bundle:1.12.375,org.apache.hadoop:hadoop-azure:3.2.0"
     "spark.sql.extensions": "io.delta.sql.DeltaSparkSessionExtension"
@@ -26,7 +26,7 @@ spec:
     labels:
       version: 3.5.3
     cores: 1
-    memory: 2G
+    memory: "2G"
     serviceAccount: spark-operator-spark
     env:
       - name: SPARK_YUNIKORN_QUEUE
@@ -36,11 +36,10 @@ spec:
       version: 3.5.3
     instances: 1
     cores: 1
-    memory: 1G
+    memory: "2G"
     env:
       - name: SPARK_YUNIKORN_QUEUE
         value: "root.high"
   batchScheduler: yunikorn
   batchSchedulerOptions:
     queue: root.high
-
