--- a/dags/sparkTransformToAzure.yaml
+++ b/dags/sparkTransformToAzure.yaml
@@ -1,7 +1,7 @@
 apiVersion: sparkoperator.k8s.io/v1beta2
 kind: SparkApplication
 metadata:
-  name: spark-python-app-k8s
+  name: spark-python-app-{{ params.table_name | lower | replace("_", "-") }}
   namespace: spark-operator
 spec:
   type: Python
