--- a/dags/sparkTransformToAzure.yaml
+++ b/dags/sparkTransformToAzure.yaml
@@ -37,7 +37,7 @@ spec:
   executor:
     labels:
       version: 3.5.3
-    instances: "{{ params.executor_instances }}"
+    instances: {{ params.executor_instances }}
     cores: {{ params.executor_cores }}
     memory: "{{ params.executor_memory }}"
     env:
