--- a/dags/sparkTransformToAzure.yaml
+++ b/dags/sparkTransformToAzure.yaml
@@ -26,25 +26,25 @@ spec:
   driver:
     labels:
       version: 3.5.3
-    cores: {{ params.driver_cores }}
-    memory: "{{ params.driver_memory }}"
+    cores: {{ params.driver_cores | default(1) }}
+    memory: "{{ params.driver_memory | default('1G') }}"
     serviceAccount: spark-operator-spark
     env:
       - name: SPARK_YUNIKORN_QUEUE
-        value: "root.{{ params.queue_name }}"
+        value: "root.{{ params.queue_name | default('low') }}"
       - name: SPARK_CONF_DIR
         value: "/opt/bitnami/spark/conf"
   executor:
     labels:
       version: 3.5.3
-    instances: {{ params.executor_instances }}
-    cores: {{ params.executor_cores }}
-    memory: "{{ params.executor_memory }}"
+    instances: {{ params.executor_instances | default(1) }}
+    cores: {{ params.executor_cores | default(1) }}
+    memory: "{{ params.executor_memory | default('1G') }}"
     env:
       - name: SPARK_YUNIKORN_QUEUE
-        value: "root.{{ params.queue_name }}"
+        value: "root.{{ params.queue_name | default('low') }}"
       - name: SPARK_CONF_DIR
         value: "/opt/bitnami/spark/conf"
   batchScheduler: yunikorn
   batchSchedulerOptions:
-    queue: "root.{{ params.queue_name }}"
+    queue: "root.{{ params.queue_name | default('default') }}"
