--- a/dags/sparkTransformToAzure.yaml
+++ b/dags/sparkTransformToAzure.yaml
@@ -15,7 +15,7 @@ spec:
   sparkVersion: 3.5.3
   timeToLiveSeconds: 600
   sparkConf:
-    "spark.yunikorn.queue": "root.high"
+    "spark.yunikorn.queue": "root.{{ params.queue_name | default('low') }}"
     "spark.local.dir": "s3a://base-checkpoint/"
     "spark.logLevel": "DEBUG"
     "spark.jars.packages": "org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.1,io.delta:delta-spark_2.12:3.1.0,org.apache.spark:spark-avro_2.12:3.5.1,org.apache.hadoop:hadoop-aws:3.3.1,com.amazonaws:aws-java-sdk-bundle:1.12.375,org.apache.hadoop:hadoop-azure:3.2.0"
