--- a/dags/sparkKafkaToBase.yaml
+++ b/dags/sparkKafkaToBase.yaml
@@ -21,6 +21,7 @@ spec:
     "spark.sql.catalog.spark_catalog": "org.apache.spark.sql.delta.catalog.DeltaCatalog"
     "spark.hadoop.fs.s3a.impl": "org.apache.hadoop.fs.s3a.S3AFileSystem"
     "spark.hadoop.fs.s3a.aws.credentials.provider": "org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider"
+    "spark.sql.files.maxPartitionBytes": "134217728"
   driver:
     labels:
       version: 3.5.3
